<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DONATION TRACKER</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_cancel_SI">Register</string>
    <string name="action_cancel_SU">Have an account? Sign in</string>
    <string name="error_invalid_email" tools:ignore="UnusedResources">This email address is invalid</string>
    <string name="error_invalid_password" tools:ignore="UnusedResources">This password is too short</string>
    <string name="error_incorrect_password" tools:ignore="UnusedResources">This password is incorrect</string>
    <string name="error_field_required" tools:ignore="UnusedResources">This field is required</string>
    <string name="permission_rationale" tools:ignore="UnusedResources">"Contacts permissions are needed for providing email
        completions."

        <!-- Strings related to logout -->
    </string>
    <string name="name_textView">Name:</string>
    <string name="location_textView">Location:</string>
    <string name="log_out">Log out</string>

    <!-- Strings related to Dash Board -->
    <string name="detail" tools:ignore="UnusedResources">detail</string>
    <string name="select_search_type">Select search type </string>

    <!-- Strings related to Welcome -->
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="sign_out" tools:ignore="UnusedResources">sign out</string>
    <string name="logo_des">logo</string>

    <!-- Strings related to Sign up -->
    <string name="Account_type" tools:ignore="UnusedResources">Account type</string>
    <string name="title_activity_dashboard" tools:ignore="UnusedResources">dashboard</string>
    <string name="textView" tools:ignore="UnusedResources">TextView</string>
    <string name="edit">Edit</string>
    <string name="inventory">Inventory</string>
    <string name="settings" tools:ignore="UnusedResources">Settings</string>
    <string name="location" tools:ignore="UnusedResources">location</string>
    <string name="user">User</string>
    <string name="enter_category">Enter Category:</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_quantity">Enter Quantity:</string>
    <string name="delete_this_item" tools:ignore="UnusedResources">Delete this item</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="update_image">UPDATE IMAGE</string>
    <string name="your_url" tools:ignore="UnusedResources">Your URL</string>
    <string name="name">Search by name</string>
    <string name="category">Search by category</string>
    <string name="enter_keyword">Search</string>

    <!--Strings related to location list-->
    <string name="location_list_name" tools:ignore="UnusedResources">Location name</string>
    <string name="location_list_type" tools:ignore="UnusedResources">Location type</string>
    <string name="title_activity_maps" tools:ignore="UnusedResources">Map</string>
    <string name="profile">profile</string>
    <string name="location_list_button">location_list_button</string>
    <string name="map_button">map_button</string>
    <string name="uri">uri</string>
    <string name="location_name">LOCATION NAME</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="account_info">Account info</string>
    <string name="sign_in_as_visitor">Sign in as Visitor</string>
    <string name="forget_password">forget password?</string>
    <string name="email">Email</string>
    <string name="send_reset_link_to_this_email">Reset password</string>
    <string name="location_address">Address</string>
    <string name="location_phone">Phone</string>
    <string name="location_website">Website</string>
    <string name="location_name1">Location name</string>
    <string name="item_category">Category</string>
    <string name="item_name">Item name</string>
    <string name="item_quantity">Quantity</string>



</resources>
