<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@color/background"
    tools:context=".controller.LocationDetailActivity">


    <TextView
        android:id="@+id/location_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_street_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_city"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/location_detail_street_address"
        android:layout_alignParentStart="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_state"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@+id/location_detail_street_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/location_detail_city"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_zip"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/location_detail_street_address"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/location_detail_state"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_type"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/location_detail_city"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textView6"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_phone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/location_detail_type"
        android:layout_alignParentStart="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/textView" />

    <TextView
        android:id="@+id/location_detail_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_detail_phone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textView8"
        android:text="@string/textView" />

    <Button
        android:id="@+id/location_detail_edit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="42dp"
        android:text="@string/edit"
        android:textColor="@color/colorPrimaryDark"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/location_detail_inventory"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="354dp"
        android:text="@string/inventory"
        android:textColor="@color/colorPrimaryDark"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/location_name1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="72dp"
        android:text="@string/location_address"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:text="@string/location_list_type"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/location_phone"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/location_website"
        android:textColor="@color/black"
        android:textStyle="bold" />
</RelativeLayout>