<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".controller.LocationDetailActivity">

    <TextView
        android:id="@+id/item_list_quantity"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/item_list_name"
        android:layout_marginStart="31dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/item_list_category"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/textView10"
        android:baselineAligned="false" />

    <TextView
        android:id="@+id/item_list_name"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/item_list_category"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/item_category"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView10"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_name"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView11"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_quantity"
        android:textColor="@color/black"
        android:textStyle="bold" />


</RelativeLayout>