<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ItemDetailActivity">

    <ImageView
        android:id="@+id/item_detail_image"
        android:layout_width="321dp"
        android:layout_height="347dp"
        android:layout_above="@+id/item_detail_quantity"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/item_detail_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/item_detail_edit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="60dp"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/item_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/item_detail_category"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="158dp"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/item_detail_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="134dp"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="89dp" />

    <Button
        android:id="@+id/item_detail_edit"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/item_detail_delete"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/item_detail_delete"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_edit"
        app:layout_constraintVertical_bias="0.821" />


</RelativeLayout>